--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jcb-gauge</title>
+    <title>jcb-badge</title>
     <link rel="stylesheet" href="./src/index.css" />
-    <script type="module" src="/src/jcb-gauge.js"></script>
+    <script type="module" src="/src/jcb-badge.js"></script>
   </head>
   <body>
-    <jcb-gauge>
-      <h1>JCB GAUGE</h1>
-    </jcb-gauge>
+    <jcb-badge>
+      <h1>JCB BADGE</h1>
+    </jcb-badge>
   </body>
 </html>
