--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jcb-badge</title>
-    <link rel="stylesheet" href="./src/index.css" />
-    <script type="module" src="/src/jcb-badge.js"></script>
-  </head>
-  <body>
-    <jcb-badge>
-      <h1>JCB BADGE</h1>
-    </jcb-badge>
-  </body>
+   <head>
+      <meta charset="UTF-8" />
+      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>jcb-badge</title>
+      <!-- <link rel="stylesheet" href="./src/index.css" /> -->
+      <script type="module" src="/src/jcb-badge.js"></script>
+   </head>
+   <body>
+      <div style="background-color: aqua; width: 500px; height: 500px; padding: 0; margin: 0;">
+         <jcb-badge mark="5,6" size="200"></jcb-badge>
+      </div>
+   </body>
 </html>
