--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    </head>
    <body>
       <div style="background-color: aqua; width: 500px; height: 500px; padding: 0; margin: 0;">
-         <jcb-badge mark="5,6" size="200"></jcb-badge>
+         <jcb-badge mark="5,6"></jcb-badge>
       </div>
    </body>
 </html>
