--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
       <link rel="icon" type="image/svg+xml" href="/vite.svg" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>jcb-badge</title>
-      <!-- <link rel="stylesheet" href="./src/index.css" /> -->
       <script type="module" src="/src/jcb-badge.js"></script>
    </head>
    <body>
-      <div style="background-color: aqua; width: 500px; height: 500px; padding: 0; margin: 0;">
-         <jcb-badge mark="5,6"></jcb-badge>
+      <div class="panel">
+         <jcb-badge numerator="5"></jcb-badge>
       </div>
    </body>
 </html>
+
+<style>
+:root {
+   --jcb-badge-text-color: black;
+   --jcb-badge-font-family: Roboto;
+}
+
+.panel {
+   background-color: aqua;
+   width: 500px;
+   height: 500px;
+   padding: 0;
+   margin: 0;
+}
+</style>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
